fixing clock alignment and footer alignment

--- a/heavyconnect/static/css/style.css
+++ b/heavyconnect/static/css/style.css
@@ -79,8 +79,11 @@
 	float: left;
 }
 footer {
-	padding: 0px;
-	margin: 0px;
+	width: 100%;
+    height: 100px;
+    bottom: 0;
+    left: 0;
+    text-align: center;
 }
 #foot {
 	text-align: center;
