--- a/heavyconnect/static/css/styleManager.css
+++ b/heavyconnect/static/css/styleManager.css
@@ -85,8 +85,12 @@ body {
 	float: left;
 }
 footer {
-	padding: 0px;
-	margin: 0px;
+	width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
 }
 #foot {
 	text-align: center;
@@ -128,13 +132,13 @@ input[type=password] {
 	margin: auto;
 }
 #clock {
-	left: 35%;
-    top: 0%;
-    right: 30%;
-    font-size: 24px;
-    margin-top: 2%;
-    color: white;
+
+    font-size: 25px;
+    position: relative;
+    color: #3C3C3C;
     font-weight: 600;
+    background: #E6F1C0;
+    text-align: center;
 }
 .input_login {
 	width: 350px;
